# stegify

./: CMakeLists.txt  LICENSE  README.md
src/: main.c  stegify.c  stegify.h
